# create-yew

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  cargo-generate.toml  index.html
src/: app.rs  main.rs
src/components/: mod.rs  nav.rs
src/views/: about.rs  home.rs  mod.rs
static/: index.scss
